--- a/themes/bugelseif/templates/base.html
+++ b/themes/bugelseif/templates/base.html
@@ -20,8 +20,8 @@
 <body id="index" class="home">
 {% include 'github.html' %}
         <header id="banner" class="body">
-                <div style="display: flex; align-items: end;">
-                        <img src="{{ SITEURL }}/theme/images/default-logo.png" width="100" height="100" alt="Girl icons created by Victoruler - Flaticon" />
+                <div>
+                        <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/default-logo.png" width="100" height="100" alt="Girl icons created by Victoruler - Flaticon" />
                         <h1>
                                 <a href="{{ SITEURL }}/">{{ SITENAME }}{% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a>
                         </h1>  
