--- a/themes/bugelseif/static/css/wide.css
+++ b/themes/bugelseif/static/css/wide.css
@@ -14,7 +14,7 @@ body {
     margin-bottom: 20px;
     overflow: hidden;
     font-size: 1em;
-    background: #F5F4EF;
+    background: #170F1A;
 }
 
 #banner nav ul{
