--- a/themes/bugelseif/templates/index.html
+++ b/themes/bugelseif/templates/index.html
@@ -33,7 +33,7 @@
                 <div class="entry-content">
                 {% include 'article_infos.html' %}
                 {{ article.summary }}
-                <a class="readmore" href="{{ SITEURL }}/{{ article.url }}">read more</a>
+                <a class="readmore" href="{{ SITEURL }}/{{ article.url }}"></a>
                 {% include 'comments.html' %}
                 </div><!-- /.entry-content -->
             </article></li>
